<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AnyLauncher</string>
    <string name="about_main" >Choose any application as Launcher.</string>
    <string name="about_author" translatable="false">By tumuyan,\n2018.11 to 2024.04</string>
    <string name="title_mode">Select Mode</string>
    <string name="title_selected">Selected App</string>
    <string name="item_r2">Switch application</string>
    <string name="item_r1">Open default Activity</string>
    <string name="btn_1">Launcher</string>
    <string name="btn_2">Select App</string>
    <string name="error_could_not_start">Not supported application.</string>

    <string name="error_btn1">This button may be not working.\nYou should manual find the Launcher Selecter from the System Setting </string>
    <string name="search">Search</string>
    <string name="toast_main_start_error">mode %1$s: Error onStart()"</string>

    <string-array name="mode_main">
        <item>Callback from background</item>
        <item>Restart Activity</item>
        <item>Open Url</item>
        <item>Open Map</item>
        <item>Phone Call</item>
        <item>Open File</item>
        <item>Activity</item>
        <item>Shortcut</item>
        <item>2nd Launcher</item>
    </string-array>

    <string-array name="menu_delay">
        <item>Delay time (ms)</item>
        <item>Image url/path</item>
    </string-array>

    <string name="title_hint_url">Http Url</string>
    <string name="title_hint_geo">Longitude and latitude</string>
    <string name="title_hint_tel">Telephone number</string>
    <string name="title_hint_file">File path</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="launcher2">2nd Launcher</string>
    <string name="btn_3">Delay</string>
    <string name="delay_desc">Delay when launching a app with Anylauncher for the first time after booting</string>
    <string name="home">Click Home 3 times</string>
    <string name="about_link"><![CDATA[
    Project homepage: https://github.com/tumuyan/AnyLauncher]]></string>

</resources>