<?xml version="1.0" encoding="utf-8"?>


<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".SettingActivity"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_buttom_border_only"
            android:padding="0dp"
            android:text="@string/btn_1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_buttom_border_only"
            android:padding="0dp"
            android:text="@string/btn_2" />

    </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="256dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/title_selected"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_pakageName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:singleLine="true"
                android:textColor="?android:attr/textColorHint"
                android:textSize="18sp"
                tools:text="PakageName" />
        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="0"
            android:background="?android:attr/listDivider"
            tools:layout_editor_absoluteX="253dp"
            tools:layout_editor_absoluteY="87dp" />

        <include
            layout="@layout/applist_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="256dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="备用启动器"
            android:textSize="20sp" />

        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:singleLine="true"
            android:textColor="?android:attr/textColorHint"
            android:textSize="18sp"
            tools:text="三击Home生效" />

        <CheckBox
            android:id="@+id/checkBox_2nd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="" />

    </LinearLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="0"
        android:background="?android:attr/listDivider"
        tools:layout_editor_absoluteX="253dp"
        tools:layout_editor_absoluteY="87dp" />

    <include
        android:id="@+id/app_view_2nd"
        layout="@layout/applist_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="0"
        android:background="?android:attr/listDivider"
        tools:layout_editor_absoluteX="253dp"
        tools:layout_editor_absoluteY="87dp" />

    <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:gravity="center"

            android:text="@string/app_name"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:gravity="center"

            android:paddingBottom="20dp"
            android:text="@string/about_main"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:gravity="center"

            android:text="@string/about_author"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5" />
    </LinearLayout>


